--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,7 +118,7 @@ header#top-section {
 }
 section {
 		padding-bottom:100px;
-				min-height:730px;
+		min-height:730px;
 		width:100%;
 		min-width:100%;
 		position:relative;
@@ -126,6 +126,7 @@ section {
 }
  #Section-1 {
 	background-color:#4ba2dc;
+z-index:0;
 }
 #Section-1:after {
 	content:"";
@@ -144,7 +145,7 @@ section {
 }
  	 #Section-2 {
 	 background-color:#222;
-	 min-height:730px;
+	 min-height:7300px;
 }
 #Section-2:after {
 	content:"";
@@ -182,6 +183,7 @@ section {
  	 #Section-4 {
 	 background-color:#222;
 	 min-height:730px;
+z-index:0;
 }
 #Section-4:after {
 	content:"";
