--- a/styles/app1.css
+++ b/styles/app1.css
@@ -594,8 +594,8 @@ body, .customize-support {
 
 .heading{
 font-size: 20px;
-font-family: Amaranth;
-color:red;
+font-family: 'PT Sans', sans-serif;
+color:seagreen;
 margin-left:10px;
 
 }
